src/css/main.css
/* ... */
.gu-interactive .singularProductRightTop {
	margin: 20px 0 20px 0;
	background-color: #0000ff;

}

.gu-interactive .loadingLargeImageMsg {
	width: 100%;
	height: 100px;
	margin-top:50px;
	display: none;
}

.gu-interactive #filteringWait {
	background: transparent ;
	background: rgba(0,0,0,0.4) ;
	filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=1, StartColorStr='#50000000', EndColorStr='#50000000');
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0px;
	left: 0px;
	z-index: 3;
	display: none;
}

.gu-interactive #arialBody {
	font-family: 'Arial';
	font-weight:normal;
	font-size:12px;
	color:#666;
}

.gu-interactive .clearBoth {
	clear:both;
}

@media (max-width:320px) {
	.gu-interactive .wishListPanelTop {
		max-width:320px !important;
		padding-left: 0 !important;
	}

}
@media (min-width: 641px) {
	.gu-interactive .productsGridHolder{
		margin-top:0;

	}
	.gu-interactive .show-wishlist {
	display: inline;
	float: left;
}
	.gu-interactive .filterHolder{
		float:right;
		margin-right:2%;
		width:60%;
	}
	.gu-interactive .styled-select {
		margin: 0 0 13px 4%;
		width:auto;
		float:right;
	}
	.gu-interactive .productsGridHolder li {
		width:31%;
		margin-right:1%;
		margin-left:1%;
	}
	/*.gu-interactive .productsGridHolder .second {
		margin-right:2%;
	}
	.gu-interactive .productsGridHolder .third {
		margin-right:0;
	}*/

	.gu-interactive .productGridItem p#productDescripPrice {
	max-width: 32%;
	float:right;
	text-align: right;
	}
.gu-interactive .productGridItem p#productName {
	text-align: left;
	float:left;
	margin-right:0;

	text-overflow: ellipsis; /* will make [...] at the end */
    width: 68%; /* change to your preferences */
    overflow:hidden; /* older browsers */
	}

	.gu-interactive #backToGridBtn{

	right:10px;
	top:10px;
}
	.gu-interactive .productGridItem #productTitle{
		padding: 15px 0;
		height:auto;
	}

	.gu-interactive #productDetailHolder{
		background: #fff;
		width:48%;
		height:100%;
		position:absolute;
		-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
		overflow:hidden;
	}

	.gu-interactive #productDetailHolder img{
		top:0;
		right:0;
		bottom:0;
		left:0;
		margin: auto;
		position:absolute;
		max-width:480px;
	}

	.gu-interactive #detailDescrip{
		width:44%;

		float:right;
		margin-top:44px;
		border-top:4px solid #609984;
		padding-top:15px;
	}

	.gu-interactive #detailDescrip p{
		font-size:14px;
		margin:10px 0 0;
	}

	.gu-interactive #detailDescrip h1{
		margin:0;
	}

	.gu-interactive .singularProductHolder{
		padding-top:5%;
		position:fixed;
		z-index: 5;
	}

	.gu-interactive .singularBackground{
		width:100%;
		margin:0;
		padding:0;
		height:100%;
		position:absolute;
	}

	.gu-interactive .singularContent{
		width:84%;
		max-width:700px;
		padding:0 35px 2% 0;
		position:relative;
		background: #f9f1e1;
		border-radius:3px;
		border:4px solid rgba(255,255,255,0.5);
		-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
	}

@media (min-width: 641px) {
    .gu-interactive .singularContent {
        position: absolute;
    }
}

@media (min-width: 900px) {

	.gu-interactive .productsGridHolder li {
		width:23%;
		margin-right:1%;
		margin-left:1%;
	}
}

@media (min-width: 940px) {

	.gu-interactive .headerImageContainer{
		height:300px;
		background-image: url('../assets/images/header_full.png');
		background-position:center;
		background-repeat: no-repeat;
	}

	.gu-interactive .headerImageContainer img{
		display:none;
	}
}


@media (min-width: 1120px) {
	.gu-interactive .productsGridHolder li {
		width:18%;
		margin-right:1%;
		margin-left:1%;
	}
}}

